Fixes docs menu height on small screens

--- a/docs/_static/theme_overrides.css
+++ b/docs/_static/theme_overrides.css
@@ -8,7 +8,7 @@
 }
 
 .wy-nav-top {
-  line-height: auto;
+  line-height: 30px;
   font-family: Fofer, cursive;
   font-size: 2em;
   box-shadow: 0px -1px 7px black;
